--- a/configs/alertmanager/alertmanager.yml
+++ b/configs/alertmanager/alertmanager.yml
@@ -1,10 +1,29 @@
+# route:
+#   receiver: 'send_to_dingding_webhook' # 'default-receiver'
+#   group_wait: 30s
+#   group_interval: 5m
+#   repeat_interval: 4h
+#   group_by: [cluster, alertname]
+#   routes:
+#   - name: 'send_to_dingding_webhook'
+#     webhook_configs:
+#     - url: 'http://dingtalk-robot:8060/dingtalk/webhook1/send'
+  # - receiver: 'database-pager'
+  #   group_wait: 10s
+  #   match_re:
+  #     service: mysql|cassandra
+  # - receiver: 'frontend-pager'
+  #   group_by: [product, environment]
+  #   match:
+  #     team: frontend
+
 route:
-  group_by: ['...']
-  group_wait: 3s
-  group_interval: 5s
-  repeat_interval: 10s
-  receiver: 'web.hook'
+  group_by: [alertname, job]
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 4h
+  receiver: 'send_to_dingding_webhook'
 receivers:
-- name: 'web.hook'
+- name: 'send_to_dingding_webhook'
   webhook_configs:
-  - url: 'http://127.0.0.1:5001/'
+  - url: 'http://dingtalk-robot:8060/dingtalk/webhook1/send'
