--- a/configs/prometheus-follower/prometheus.yml
+++ b/configs/prometheus-follower/prometheus.yml
@@ -1,24 +1,24 @@
 ---
 
 global:
+
   scrape_interval:     15s
   evaluation_interval: 15s
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-      monitor: 'prometheus-dcos-forwarder'
+      monitor: 'prometheus-follower'
 
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
-
 rule_files:
   - node_exporter_recording.rules
-  - node_stats.rules
+  # - node_exporter_alert.rules
 
-alerting:
-  alertmanagers:
-    - static_configs:
-        - targets: ['localhost:9093']
+# alerting:
+#   alertmanagers:
+#     - static_configs:
+#         - targets: ['alertmanager:9093']
 
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
@@ -28,22 +28,7 @@ scrape_configs:
     static_configs:
       - targets: ['node_exporter_stats:9100']
 
-  - job_name: 'prometheus'
-    scrape_interval: 10s
-    static_configs:
-      - targets: ['localhost:9090']
-
-  # - job_name: 'federate'
-  #   scrape_interval: 15s
-
-  #   honor_labels: true
-  #   metrics_path: '/federate'
-
-  #   params:
-  #     'match[]':
-  #       - '{job="prometheus"}'
-  #       - '{__name__=~"job:.*"}'
-
+  # - job_name: 'prometheus'
+  #   scrape_interval: 10s
   #   static_configs:
-  #     - targets:
-  #       - 'prometheus-slave:9090'
+  #     - targets: ['localhost:9090']
