--- a/configs/grafana-follower/provisioning/dashboards/config.yml
+++ b/configs/grafana-follower/provisioning/dashboards/config.yml
@@ -2,7 +2,7 @@ apiVersion: 1
 
 providers:
   # <string> an unique provider name. Required
-  - name: 'Prommetheus-Follower'
+  - name: 'Prommetheus-Follower-1'
     # <int> Org id. Default to 1
     orgId: 1
     # <string> name of the dashboard folder.
