--- a/configs/grafana-follower/provisioning/datasources/config.yml
+++ b/configs/grafana-follower/provisioning/datasources/config.yml
@@ -10,12 +10,12 @@ deleteDatasources:
 # what's available in the database
 datasources:
   # <string, required> name of the datasource. Required
-  - name: Prometheus-Follower
+  - name: Prometheus-Follower-1
     # <string, required> datasource type. Required
     type: prometheus
     # <string, required> access mode. proxy or direct (Server or Browser in the UI). Required
     access: proxy
     # <string> url
-    url: http://prometheus-follower:9090
+    url: http://prometheus-follower-1:9090
     isDefault: true
     editable: false
