--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,3 +144,18 @@ services:
         volumes:
             - ./configs/dingtalk/config.yml:/etc/prometheus-webhook-dingtalk/config.yml
         restart: unless-stopped
+
+
+    cadvisor:
+      image: google/cadvisor:latest
+      container_name: cadvisor
+      ports:
+        - 8080:8080
+      networks:
+        - monitoring_network
+      restart: unless-stopped
+      volumes:
+        - /:/rootfs:ro
+        - /var/run:/var/run:rw
+        - /sys:/sys:ro
+        - /var/lib/docker/:/var/lib/docker:ro
