--- a/configs/prometheus-follower-2/prometheus.yml
+++ b/configs/prometheus-follower-2/prometheus.yml
@@ -14,6 +14,9 @@ global:
 # rule_files:
 #   - node_exporter_recording.rules
   # - node_exporter_alert.rules
+rule_files:
+
+  - node_exporter_recording.rules
 
 # alerting:
 #   alertmanagers:
@@ -22,6 +25,16 @@ global:
 
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
+
+  - job_name: "node"
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['node_exporter_stats:9100']
+
+  - job_name: 'prometheus'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['localhost:9090']
 
   - job_name: 'blackbox'
     metrics_path: /probe
