--- a/configs/prometheus-leader/prometheus.yml
+++ b/configs/prometheus-leader/prometheus.yml
@@ -45,3 +45,21 @@ scrape_configs:
       - targets:
         - 'prometheus-follower-1:9090'
         - 'prometheus-follower-2:9090'
+
+  - job_name: 'cadvisor'
+    scrape_interval: 10s
+
+    honor_labels: true
+    metrics_path: 'metrics'
+
+    params:
+      'match[]':
+        - '{job="prometheus"}'
+        - '{job="node"}'
+        - '{job="blackbox"}'
+        # - '{__name__=~"job:.*"}'
+        # - '{__name__=~"node.*"}'
+
+    static_configs:
+      - targets:
+        - 'cadvisor:8080'
